styles/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
}

a {
    text-decoration-line: none;
}

header {
    padding: 2rem 0;
}

header>div {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    
}

.top_nav_list {
    display: flex;
    flex-direction: row;
    gap: 2rem;
    padding: 0 2rem;
}

header a,
footer a {
    color: inherit;
}

.main-content {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 2rem;
}

.secondary-content {
    max-width: 850px;
    margin: 0 auto;
    padding: 0 2rem;
}

main {
    display: flex;
    flex-direction: column;
    align-content: space-between;
}

ol {
    list-style: none;
}

.section_one {
    padding: 6rem 0px;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.section_one .container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 2rem;
}

.section_one>div div {
    flex: 1 1 0px;
    max-width: 100%;
}

.section_one>div>div>div * {
    max-width: 450px;
}

.section_one>div>div>div button {
    margin-top: 1rem;
}

.section_two {
    padding: 3rem 0px;
    margin-bottom: 2rem;
}

.section_two article {
    max-height: 75%;
}

.section_two .container{
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    gap: 1rem 1rem;
}

.section_two h2 {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

menu img,
figcaption {
    max-width: 11rem;
    text-align: center;
    color: inherit;
}

menu img {
    border: 5px solid;
    border-radius: 10%;
}

.section_three {
    padding: 8rem 0px;
}

.section_three article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.author {
    text-align: right;
    padding-right: 1rem;
}

.section_four {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 6rem 0px;
}

footer {
    height: 5vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.cta-container {
    flex: 1 1 0px;
    border-radius: 8px;
    padding-top: 3rem;
    padding-bottom: 3rem;
}

.cta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.sign-up {
    border: 2px solid;
    border-radius: 0.5rem;
    font-size: 1.125rem;
    cursor: pointer;
    min-width: 8rem;
    min-height: 2rem;
}

@media (max-width: 768px) {
    .cta {
        flex-direction: column;
        text-align: center;
        gap: 2rem;
    }
}

@media (max-width: 830px) {
    .section_one .container{
        flex-direction: column;
        gap: 2rem;
    }

    .section_one .inner-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }
}

